@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST icalendar-1.1.5.gem 49664 RMD160 737a162c2611a48e3dae2cf3fc5ab3f4043b5d41 SHA1 76eb9e51aa61b228a190d8b48636b8323be13d25 SHA256 56c6d5acf1f728db920628203a17b2e1d7d30c2d61d270b96c6234da962edc41
+DIST icalendar-1.1.6.gem 50176 RMD160 6e592f4843e7c794ce04ffe53248226813aea961 SHA1 b42c94c6989650bd53b06138a638df0549e562c2 SHA256 fc5dce2a2e42de56f9d4a4b5ef64414181fb28f245505da39b432d634ae90bf9
 EBUILD icalendar-1.1.5.ebuild 667 RMD160 9cd182ef6dc151bbdbdbd2505cb4a5ddd7636ea9 SHA1 a2fd676beeb1771596a43d52dbeca572a4029ee4 SHA256 e9b6ceb1510831be3e093e3e4864655c24bb7a043af19f01ad542aa4a6f134e4
-MISC ChangeLog 1084 RMD160 1a6909df4dbe1beed613df2425f17df7e96673e1 SHA1 36bf2606e8c736f9947bfa18fa92d4f16f07b37d SHA256 809e1f2ea5b0aad9417939d79b4987066e9342003ce586a00ed38f239369e3ad
+EBUILD icalendar-1.1.6.ebuild 750 RMD160 de02591d3a1453a53a0cbca5f367c3ff44ce1cae SHA1 0695b813bcbf0db096069aca2fe0dc3f2f16200f SHA256 21686b9729ae0030793c5d0206464682545d85bf6c23701f7e0c5e7609f88bbf
+MISC ChangeLog 1208 RMD160 291c8397773c07ff4c590e6656df5e713fb68622 SHA1 6c2aa356509da3a4b0e5c89202031fc876976049 SHA256 e5f7fd606455bca3cb6f19b567228086641d851d08215cbfeed8fa6359e6ef22
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk3wlmcACgkQrnu0mw69JkqH/QEAjsk1CkDQ8wNphhWUV2FT1mCH
-MW+IsTKE3xgBazDBzcAA/1vL+DLQ9fFfUICHzVD1u+Rt14ex+ejVMzSALwShck5n
-=gpOK
+iF4EAREIAAYFAk3wl5IACgkQrnu0mw69JkqZjgD/bf5w2JeNYdtSyZB9uLRREHb6
+WcDsdIzjEIB68i8yylgA/31JS087/UYhD7Rn3HnjxFSz0WmBmAbMgcm6ztHsQdVr
+=ZDES
 -----END PGP SIGNATURE-----
